k8s-manifest/base/contact-support.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contact-support
  labels:
    app: contact-support
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contact-support
  template:
    metadata:
      labels:
        app: contact-support
    spec:
      containers:
        - name: contact-support
          image: contact-support
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: contact-support-service
spec:
  selector:
    app: contact-support
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
