k8s-manifest/base/ecommerce-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-ui
  labels:
    app: ecommerce-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-ui
  template:
    metadata:
      labels:
        app: ecommerce-ui
    spec:
      containers:
        - name: ecommerce-ui
          image: ecommerce-ui
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-ui-service
spec:
  selector:
    app: ecommerce-ui
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
