k8s-manifest/base/order-management.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-management
  labels:
    app: order-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-management
  template:
    metadata:
      labels:
        app: order-management
    spec:
      containers:
        - name: order-management
          image: order-management
          ports:
            - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: order-management-service
spec:
  selector:
    app: order-management
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  type: ClusterIP
