k8s-manifest/base/product-inventory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-inventory
  labels:
    app: product-inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-inventory
  template:
    metadata:
      labels:
        app: product-inventory
    spec:
      containers:
        - name: product-inventory
          image: product-inventory
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: product-inventory-service
spec:
  selector:
    app: product-inventory
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP
