k8s-manifest/base/shipping-handling.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-handling
  labels:
    app: shipping-handling
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping-handling
  template:
    metadata:
      labels:
        app: shipping-handling
    spec:
      containers:
        - name: shipping-handling
          image: shipping-handling
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: shipping-handling-service
spec:
  selector:
    app: shipping-handling
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
