k8s-manifest/base/ecommerce-ui-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ecommerce-ui-route
spec:
  parentRefs:
    - name: ecommerce-gateway
      namespace: gateway-system
  hostnames:
    - "app.prakriti.website"
  rules:
    - backendRefs:
        - name: ecommerce-ui-service
          port: 4000
# ---
# apiVersion: networking.gke.io/v1
# kind: HealthCheckPolicy
# metadata:
#   name: ecommerce-ui-healthcheck
# spec:
#   default:
#     config:
#       type: HTTP
#       httpHealthCheck:
#         port: 4000
#         requestPath: /
#   targetRef:
#     group: ""
#     kind: Service
#     name: ecommerce-ui-service
